Adding address field to the Comercios model

--- a/config/typus/comercio.yml
+++ b/config/typus/comercio.yml
@@ -2,7 +2,7 @@
 
 Comercio:
   fields:
-    default: name, lat, long
-    form: name, lat, long
+    default: name, address
+    form: name, lat, long, address
   relationships: 
   application: Application
